need to fix spacing

--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -1,19 +1,13 @@
-.h1 {
+.home-header h1 {
   font-family: Arial, Helvetica, sans-serif;
-  justify-content: center;
-
+  font-size: 150px;
+  color: white;
 }
 
-.btn-gradient {
-  color: white;
-  padding: 8px 24px;
-  border-radius: 4px;
-  font-weight: bold;
-  background: linear-gradient(#167FFB, #0F60C4);
-  transition: background 0.3s ease;
-  border: 1px solid #0F60C4;
+.home-header p {
+  font-size: 50px;
+  color: rgba(244, 186, 19, 1);
+  opacity: .7;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  font-family: Arial, Helvetica, sans-serif;
 }
-
-.btn-gradient:hover {
-  background: linear-gradient(#147EFF, #0F67DA);
-  color: white;
