--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,22 +1,94 @@
 
 // Specific CSS for your home-page
 
-//
-// .index__container{
-// width: 100%;
-// height: 100vh;
-// display: flex;
-// align-items: center;
-// justify-content: center;
-// padding: 0 1.5rem;
-// }
+.background-image {
+  background-image: url(https://images.unsplash.com/photo-1589895009255-67c7cb06de4e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1472&q=80);
+  width: 100%;
+  height: 100vh;
+}
 
-// .hotel-post-img{
-// width: 100%;
-// }
+.card-product {
+  overflow: hidden;
+  height: 120px;
+  color:rgba(196, 196, 196, 0.96);
+  // box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  display: flex;
+  align-items: center;
 
-// .hotel-post{
-//   width: 100%;
+}
+
+.home-header {
+  justify-content: center;
+  align-items: center;
+}
+
+.home-header h1 {
+  font-family: url(https://fonts.googleapis.com/css2?family=Montserrat:ital@1&family=Permanent+Marker&display=swap);
+  font-size: 50px;
+  color: white;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.4);
+  font-family: Arial, Helvetica, sans-serif;
+  background-position: center;
+  justify-content: center;
+  align-items: center;
+  padding-left: 400px;
+  padding-top: 60px;
+}
+
+.home-header p {
+  font-size: 50px;
+  color: rgb(241, 182, 3);
+  opacity: .7;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  font-family: Helvetica, sans-serif;
+  background-position: center;
+  justify-content: center;
+  align-items: center;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.4);
+  padding-left: 550px;
+}
+
+.btn-group {
+ color: white;
+ padding: 10px;
+}
+
+.search-button {
+  padding-left: 620px;
+  padding-top: 100px;
+
+}
+
+.input-info {
+  display: flex;
+  align-items: center;
+  padding-left: 250px;
+  margin-left: 50px;
+
+}
+
+.input .form-control {
+  margin-right: 30px;
+  min-width: 50px;
+
+}
+
+.index__container {
+
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 1.5rem;
+}
+
+.hotel-post-img{
+width: 100%;
+}
+
+// .hotel-post {
+// width: 100%;
 //   max-width: 98rem;
 //   padding: 5rem;
 //   background-color: green;
@@ -25,16 +97,15 @@
 //   align-items: center;
 //   border-radius: .8rem;
 
-// }
 
 // .hotel-post__name{
 // color:red;
 // }
 
-index page
-.hotel_card {
-box-shadow: #F4BA13;
-}
+// .index page {
+// .hotel_card
+// box-shadow: #F4BA13;
+// }
 
 .view_btn {
   text-decoration: none;
@@ -129,4 +200,3 @@ box-shadow: #F4BA13;
  height: 60px;
  padding-right: 8px;
 }
-
